WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99820
REGRESSION(
r131844
): It broke the build on !ENABLE(NETSCAPE_PLUGIN_API) platforms
https://bugs.webkit.org/show_bug.cgi?id=99820
Summary
REGRESSION(r131844): It broke the build on !ENABLE(NETSCAPE_PLUGIN_API) platf...
Nandor Huszka
Reported
2012-10-19 00:54:50 PDT
Log from Mac bot: /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebKit2/UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp:39:16: error: use of undeclared identifier 'PluginInfoStore' Vector<String> PluginInfoStore::pluginsDirectories() Log from Win bot: C:\WebKitBuildSlave\szeged-windows-1\qt-windows-32bit-release\build\Source\WebKit2\UIProcess\Launcher\qt\ProcessLauncherQt.cpp(116) : error C2065: 'PluginProcess' : undeclared identifier Could you check it, please?
Attachments
Patch
(4.46 KB, patch)
2012-10-19 02:31 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-10-19 02:31:08 PDT
Created
attachment 169582
[details]
Patch
Jocelyn Turcotte
Comment 2
2012-10-19 02:42:01 PDT
Comment on
attachment 169582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169582&action=review
> Source/WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:1321 > +#if PLATFORM(MAC) || ENABLE(NETSCAPE_PLUGIN_API) > WebPage* webPage = m_frame->page(); > ASSERT(webPage); > - > +#endif
Nitpick: we could also use m_frame->page() directly to call layerHostingMode and createPlugin.
Csaba Osztrogonác
Comment 3
2012-10-19 03:30:13 PDT
Fixed patch landed in
https://trac.webkit.org/changeset/131884
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug