REGRESSION(r131844): It broke the build on !ENABLE(NETSCAPE_PLUGIN_API) platforms https://bugs.webkit.org/show_bug.cgi?id=99820

Reviewed by Jocelyn Turcotte.

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
(WebKit::ProcessLauncher::launchProcess): Add missing ENABLE(PLUGIN_PROCESS) guard.
* UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp: The whole file should be ENABLE(NETSCAPE_PLUGIN_API) guarded as the PluginInfoStore class.
(WebKit::PluginInfoStore::getPluginInfo):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::createPlugin): Eliminate the unused webPage variable (build fail with -Werror) if !(PLATFORM(MAC)||ENABLE(NETSCAPE_PLUGIN_API)).

Canonical link: https://commits.webkit.org/117820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131884 268f45cc-cd09-0410-ab3c-d52691b4dbfc